[package]
name = "tunnletops"
version = "0.5.19"
edition = "2021"
rust-version = "1.80"
description = "Fast PHI/PII scanner for source repositories"
license = "MIT"
repository = "https://github.com/northisup/tunnletops"

[dependencies]
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
regex = "1"
aho-corasick = "1"
rayon = "1"
phonenumber = "0.3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_yaml = "0.9"
memchr = "2"
crossbeam-channel = "0.5"
owo-colors = "4"
ratatui = "0.29"
crossterm = "0.28"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
ureq = { version = "2", features = ["tls"] }
sha2 = "0.10"
hex = "0.4"

# NER inference.
# gline-rs pins ort = "=2.0.0-rc.9"; we match to avoid dep duplication.
ort = { version = "=2.0.0-rc.9", features = ["download-binaries", "ndarray"] }
ndarray = "0.16"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }

# GLiNER inference engine. `orp` is a gline-rs dep we use directly for
# RuntimeParameters — must match gline-rs's crates.io pin exactly.
gline-rs = "1"
orp = "0.9"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[[bin]]
name = "tunnletops"
path = "src/main.rs"
